Fixing user info and site dropdown buttons on small Getting rid of shadow on scroll header, replacing it with border Adding border to bottom of content wrapper Fixing scroll header so it resizes properly when the window does Centering footer properly A little bit of cleanup

--- a/refreshed/big.css
+++ b/refreshed/big.css
@@ -8,14 +8,10 @@
 	display: block !important;
 }
 
-#contentwrapper {
+#contentwrapper,
+#footer {
 	margin-left: 12em;
 	margin-right: 1em;
-}
-
-#footer {
-	margin-left: 14em;
-	margin-right: 14em;
 }
 
 #smalltoolboxwrapper {
